[tool.poetry]
name = "carbon-management-app"
version = "0.1.0"
description = ""
authors = ["nathantgray <nathantgray@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
gridappsd-python = {version = "^2024", allow-prereleases = true}
cim-graph = "^0.1.2a0"
cvxpy = "^1.5.2"
tabulate = "^0.9.0"
plotly = "^5.24.0"
kaleido = "0.2.1"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
yapf = "^0.40.2"
mypy = "^1.8.0"

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true

[tool.mypy]
show_error_context = true
pretty = true
show_column_numbers = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
